<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:trunext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/buss_layout_textdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/inside_margin_5px"
            android:background="@color/article_line_divider" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inside_margin_71px"
            android:layout_marginRight="@dimen/inside_margin_71px"
            android:orientation="vertical">

            <in.plash.trunext.customfonts.MyTextView
                android:id="@+id/artilce_tagname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="Life "
                android:textColor="@color/black"
                android:textScaleX="1"
                android:textSize="@dimen/text_size_h6"
                android:visibility="gone"
                trunext:fontName="@string/DroidSerif_Regular" />

            <in.plash.trunext.customfonts.MyTextView
                android:id="@+id/article_catigory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_10"
                android:text="Category"
                android:textAllCaps="true"
                android:textColor="#890056"
                android:textSize="@dimen/text_size_h9"
                trunext:fontName="@string/AvenirLTStd_Roman" />


            <in.plash.trunext.customfonts.MyTextView
                android:id="@+id/article_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_10"
                android:text="Heading "
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_h3"
                trunext:fontName="@string/SourceSansPro_Semibold" />

            <in.plash.trunext.customfonts.MyTextView
                android:id="@+id/article_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:paddingBottom="@dimen/margin_5"
                android:paddingTop="@dimen/margin_5"
                android:text="@string/place_holder_sum"
                android:textColor="#7f7f7f"
                android:textSize="@dimen/text_size_h7"
                trunext:fontName="@string/SourceSansPro_Regular" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/inside_margin_5px"
                android:layout_marginBottom="@dimen/forbes_new_div_height"
                android:background="@color/article_line_divider" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>